# aws_sagemaker

./: README.md  aws_sagemaker_endpoint_test.py
sample_c_model/: .dockerignore  CMakeLists.txt  Dockerfile  main_program.c  main_program.py  simple_model.c  simple_model.h  test_model.py  test_simple_model.c
